建立預告片後台列表

--- a/css/css.css
+++ b/css/css.css
@@ -18,22 +18,26 @@ input[type='text'],input[type='file'],input[type='password'],textarea,.button
 	color:#E7E7E7;
 	border:none;
 	font:Open Sans,'微軟正黑體';
-	font-weight:600;
+	font-weight:300;
 }
 input[type='button'],input[type='submit'],input[type='reset'],button,.button
 {
-	min-width:70px;
-	min-height:40px;
+	min-width:30px;
+	min-height:20px;
 	background:#000;
+	padding: 5px 12px;
+	margin: 0 5px;
 	color:#fff;
 	border:none;
 	cursor:pointer;
-	font-size:18px;
+	font-size:13px;
 	text-decoration:none;
+	border-radius: 6px;
 }
 input[type='button']:hover,input[type='submit']:hover,input[type='reset']:hover,button:hover,.button:hover
 {
 	background:#F1B878;
+	box-shadow: 1px 1px 10px #999;
 }
 input:focus
 {
